use angular cli

--- a/src/index.html
+++ b/src/index.html
@@ -1,42 +1,15 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
-
 <head>
   <meta charset="utf-8">
   <title>FluenTask</title>
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <style>
-    body {
-      font-family: 'arial';
-      font-size: 16px;
-      padding: 0;
-      margin: 0;
-    }
-    
-    header {
-      background-color: #679;
-      color: #fa0;
-    }
-    
-    header h1 {
-      margin: 0;
-      font-weight: 100;
-      font-size: 1.4em;
-      padding: 0.3em;
-    }
-  </style>
   <link rel="icon" type="image/x-icon" href="favicon.ico">
-
+  
 </head>
-
 <body>
-  <app-root>
-    <header>
-      <h1>FluenTask</h1>
-    </header>
-  </app-root>
+  <app-root>Loading...</app-root>
 </body>
-
 </html>
