--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
   <base href="/fluentask/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
-  
 </head>
 <body>
   <app-root>Loading...</app-root>
-<script type="text/javascript" src="inline.js"></script><script type="text/javascript" src="styles.b52d2076048963e7cbfd.bundle.js"></script><script type="text/javascript" src="main.341735dd3c7b4627c990.bundle.js"></script></body>
+<script type="text/javascript" src="inline.js"></script><script type="text/javascript" src="styles.7935b36a6cf9cf002cb3.bundle.js"></script><script type="text/javascript" src="main.23cf6217d419229d4299.bundle.js"></script></body>
 </html>
