--- a/404.html
+++ b/404.html
@@ -1,16 +1,28 @@
 <!doctype html>
 <html>
-<head>
-  <meta charset="utf-8">
-  <title>FluenTask</title>
-  <base href="/fluentask/">
 
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
-  <link rel="manifest" href="/manifest.webapp">
+<head>
+	<meta charset="utf-8">
+	<title>FluenTask</title>
+	<base href="/fluentask/">
+
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+	<link rel="icon" type="image/x-icon" href="favicon.ico">
+	<link rel="manifest" href="/manifest.webapp">
+	<script>
+    if ('serviceWorker' in navigator) {
+      navigator.serviceWorker
+        .register('./service-worker.js')
+          .then(function() {
+            console.log('Service Worker Registered');
+          });
+    }
+    </script>
 </head>
+
 <body>
-  <app-root>Loading...</app-root>
+	<app-root>Loading...</app-root>
 <script type="text/javascript" src="inline.js"></script><script type="text/javascript" src="styles.b40c7a9a30e4729a3b40.bundle.js"></script><script type="text/javascript" src="main.ecdd1db330f6e24b2d7a.bundle.js"></script></body>
+
 </html>
