--- a/404.html
+++ b/404.html
@@ -9,7 +9,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 	<link rel="icon" type="image/x-icon" href="favicon.ico">
-	<link rel="manifest" href="/manifest.webapp">
+	<link rel="manifest" href="/manifest.json">
 	<script>
     if ('serviceWorker' in navigator) {
       navigator.serviceWorker
